@@ -34,7 +34,6 @@ string XmlAttrib(class TiXmlElement* elem, const char* attrname);
 unsigned XmlAttribu(class TiXmlElement* elem, const char* attrname);
 
 #define GRAVITY 9.806	// a very global constant
-#define NR_CLOUD_TEXTURES 2
 
 #include "objcache.h"
 extern objcachet<class model> modelcache;
