@@ -1,3 +1,9 @@
+2004-05-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* subsim.cpp
+	  - mission descriptions are displayed in the menu
+	* widget
+	  - new attribute for widget_text: "sunken"
+
 2004-05-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* replaced own text file parsing with xml code
 	* now missions and descriptions are fully dynamic
